--- a/index.html
+++ b/index.html
@@ -7,19 +7,41 @@
     <title>Welcome Page</title>
   </head>
   <body>
+    <!-- STATUS BAR -->
     <div class="status-bar">
       <div class="status-bar__column">
         <span>No Service</span>
-        <!--To Do: Wifi icon-->
+        <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
         <span>11:20</span>
       </div>
       <div class="status-bar__column">
         <span>111%</span>
-        <!-- To Do: battery icon -->
-        <!-- To Do: lightning icon -->
+        <i class="fas fa-battery-three-quarters"></i>
+        <i class="fas fa-bolt"></i>
       </div>
     </div>
+
+    <!-- HEADER - WELCOME -->
+    <header class="welcome-header">
+      <h1 class="welcome-header__title">Welcome to HTML and CSS study</h1>
+      <p class="welcome-header__text">
+        If you want to be a developer, you have to study hard.
+      </p>
+    </header>
+
+    <form id="login-form">
+      <input type="text" placeholder="Email or phone number" />
+      <input type="password" placeholder="Password" />
+      <input type="submit" value="Log IN" />
+      <a href="#">Find ID or Password</a>
+    </form>
+
+    <!-- fontawesome kit -->
+    <script
+      src="https://kit.fontawesome.com/26d23206fd.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
