--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome Page</title>
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <!-- STATUS BAR -->
@@ -18,7 +19,7 @@
       </div>
       <div class="status-bar__column">
         <span>111%</span>
-        <i class="fas fa-battery-three-quarters"></i>
+        <i class="fas fa-battery-full fa-lg"></i>
         <i class="fas fa-bolt"></i>
       </div>
     </div>
