--- a/friends.html
+++ b/friends.html
@@ -6,11 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Friends</title>
     <link rel="stylesheet" href="/css/style.css" />
-    <!-- RESET CSS CDN -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"
-    />
   </head>
   <body>
     <!-- STATUS BAR -->
@@ -38,6 +33,29 @@
         <span><i class="fas fa-cog fa-lg"></i></span>
       </div>
     </header>
+
+    <!--FRIEND'S NAMES DISPLAY SCREEN-->
+    <a id="friends-display-link" href="#">
+      <i class="fas fa-info-circle"></i>
+      Friend's Names Display
+      <i class="fas fa-chevron-right fa-xs"></i>
+    </a>
+
+    <!--USER-COMPONENT SCREEN-->
+    <div class="user-component">
+      <div class="user-component__column">
+        <img
+          class="user-component__avatar"
+          src="/screenshots/ianDev.png"
+          alt=""
+        />
+        <div class="user-component__text">
+          <h4 class="user-component__name">IanDev</h4>
+          <h6 class="user-component__subtitle">I'm studying HTML/CSS</h6>
+        </div>
+      </div>
+      <div class="user-component__column"></div>
+    </div>
 
     <!-- NAVIGATION BAR -->
     <nav class="nav">
