--- a/chats.html
+++ b/chats.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Friends</title>
+    <title>Chats</title>
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
@@ -28,62 +28,31 @@
     <!-- HEADER -->
 
     <header class="screen-header">
-      <h1 class="screen-header__title">Friends</h1>
+      <h1 class="screen-header__title">Chats</h1>
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
+        <span><i class="far far fa-comments fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
         <span><i class="fas fa-cog fa-lg"></i></span>
       </div>
     </header>
 
-    <!--FRIEND'S NAMES DISPLAY SCREEN-->
-
-    <a id="friends-display-link" href="#">
-      <i class="fas fa-info-circle"></i>
-      Friend's Names Display
-      <i class="fas fa-chevron-right fa-xs"></i>
-    </a>
-
     <!--USER-COMPONENT SCREEN-->
 
-    <main class="friends-screen">
+    <main class="main-screen">
       <div class="user-component">
         <div class="user-component__column">
           <img
-            class="user-component__avatar user-component__avatar--xl"
+            class="user-component__avatar user-component__avatar"
             src="/screenshots/ianDev.png"
             alt=""
           />
           <div class="user-component__text">
             <h4 class="user-component__name">IanDev</h4>
-            <h6 class="user-component__subtitle">I'm studying HTML/CSS</h6>
+            <h6 class="user-component__subtitle">Please study more harder</h6>
           </div>
         </div>
         <div class="user-component__column"></div>
-      </div>
-      <div class="friends-screen__channel">
-        <div class="friends-screen__channel-header">
-          <span>Channel</span>
-          <i class="fas fa-chevron-up fa-xs"></i>
-        </div>
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              class="user-component__avatar user-component__avatar--sm"
-              src="/screenshots/ianDev.png"
-              alt=""
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__name user-component__name-not-bold">
-                Channel
-              </h4>
-            </div>
-          </div>
-          <div class="user-component__column">
-            <span>2</span>
-            <i class="fas fa-chevron-right fa-xs"></i>
-          </div>
-        </div>
       </div>
     </main>
 
@@ -93,13 +62,13 @@
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="friends.html"
-            ><i class="fas fa-user fa-2x"></i
+            ><i class="far fa-user fa-2x"></i
           ></a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
             <span class="nav__notification">1</span
-            ><i class="far far fa-comment fa-2x"></i
+            ><i class="fas fa-comment fa-2x"></i
           ></a>
         </li>
         <li class="nav__btn">
